# cargo-darwin

./: .gitignore  Cargo.toml  Changelog.md  Readme.md
lab/src/: main.rs
playground/: Cargo.toml
playground/src/: lib.rs
playground/src/a/: toto.rs
src/: cli.rs  lib.rs  main.rs  mutation.rs  report.rs
src/actions/: analyze.rs  clean.rs  generate.rs  mod.rs  reporting.rs  verify.rs
src/actions/reporting/: mod.rs  sink.rs
