[package]
name = "cargo-darwin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive", "string"] }
eyre = "0.6.12"
syn = { version = "2.0.53", features = ["parsing", "full"] }
walkdir = "2.5.0"
log = { version = "0.4.21" }
env_logger = { version = "0.11.3", features = ["color"] }
quote = "1.0.35"
globwalk = "0.9.1"
prettyplease = "0.2.16"
tree-sitter = "0.20.4"
tree-sitter-rust = "0.20.4"
proc-macro2 = { version = "1.0.79", features = ["span-locations"] }
normpath = "1.2.0"
imara-diff = "0.1.5"
wait-timeout = "0.2.0"